--- a/css/style.css
+++ b/css/style.css
@@ -1856,7 +1856,7 @@ html{
 /* Media Queries */
 
 @media (max-width:1250px){
-    .contenedor .heroSection{
+    /* .contenedor .heroSection{
         width:100vw;
         height:100vh;
         margin: 400px auto;
@@ -1882,13 +1882,13 @@ html{
     }
     .contenedor .heroSection .hero .cellphone{
         width: 43%;
-    }
-    .socialMediaUno{
+    } */
+    /* .contenedor .socialMediaUno{
         display: none;
     }
-    .arrowUp{
+    .contenedor .arrowUp{
         display:none
-    }
+    } */
     .container .buscadorServices{
         width: 70%;
     }
@@ -1904,12 +1904,12 @@ html{
     .container .accordion .whatsApp{
         width: 20%;
     }
-    .footer .mainFooter{
+    /* .footer .mainFooter{
         width: 80%;
-    }
+    } */
 }
 @media (max-width: 1200px){
-    .contenedor .nosotros .subtitulo{
+    /* .contenedor .nosotros .subtitulo{
         margin-bottom: 100px ;
     }
     .contenedor .nosotros .containerInfo{
@@ -1934,8 +1934,8 @@ html{
     }
     .contenedor .nosotros .containerInfo .laptop{
         width: 80%;
-    }
-    .contenedor .contenedorEmpleos {
+    } */
+    /* .contenedor .contenedorEmpleos {
         width: 100%;
     }
     .contenedor .contenedorEmpleos .jobs{
@@ -1946,16 +1946,27 @@ html{
         justify-content: space-around;
         align-items: center;
     }
-    .contenedor .contenedorEmpleos .screens{
-        width: 80%;
-        height:auto;
-        margin: 100px auto 0px auto;
-    }
     .contenedor .contenedorEmpleos .jobs .empleosArticle{
         width: 70%;
         margin: 0px auto;
     }
-    .contenedor .containerTestimony .bundleOpinion .groupLine{
+    .contenedor .contenedorEmpleos .screens{
+        width: 80%;
+        height:auto;
+        margin: 100px auto 0px auto;
+    } */
+    /* .contenedor .contenedorMatch{
+        width: 90%;
+    }
+    .contenedor .contenedorMatch .bannerMatch{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+    } */
+    /* .contenedor .containerTestimony .bundleOpinion .groupLine{
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -1967,23 +1978,13 @@ html{
     .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort{
         width: 55%;
     }
-    .contenedor .contenedorMatch{
-        width: 90%;
-    }
-    .contenedor .contenedorMatch .bannerMatch{
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        margin: 0 auto;
-    }
+
     .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
         margin: 10px auto 10px 30px;
-    }
-    .contenedor .accordion .whatsApp{
+    } */
+    /* .contenedor .accordion .whatsApp{
         width: 30%;
-    }
+    } */
     .container .containerTestimony .headline{
         width: 60%;
         display: flex;
@@ -2017,7 +2018,7 @@ html{
     .container .accordion .whatsApp{
         width: 30%;
     }
-    .bannerPublicidadDos .bannerSection .banner{
+    /* .bannerPublicidadDos .bannerSection .banner{
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-around;
@@ -2025,10 +2026,10 @@ html{
     }
     .bannerPublicidadDos .bannerSection .banner .itemCellphones .accordion{
         gap:0 !important;
-    }
+    } */
 }
 @media (max-width:1000px){
-    .contenedor .heroSection .hero .info .btnAction .ctaDeveloper{
+    /* .contenedor .heroSection .hero .info .btnAction .ctaDeveloper{
         width:80%;
     }
     .contenedor .heroSection .hero .info .btnAction .ctaDesigner{
@@ -2036,27 +2037,27 @@ html{
     }
     .contenedor  .heroSection .hero .cellPhone{
         width: 53%;
-    }
-    .contenedor .nosotros .containerInfo .info{
+    } */
+    /* .contenedor .nosotros .containerInfo .info{
         width: 70%;
-    }
-    .contenedor .contenedorEmpleos .empleosArticle{
+    } */
+    /* .contenedor .contenedorEmpleos .empleosArticle{
         width: 70%;
         margin: 0px auto;
     }
     .contenedor .containerTestimony .verMas{
         width:25%;
-    }
-    .contenedor .contenedorMatch{
+    } */
+    /* .contenedor .contenedorMatch{
         width: 90%;
     }
     .contenedor .contenedorMatch .bannerMatch{
         width: 60%;
         margin: 0 auto;
-    }
-    .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones{
+    } */
+    /* .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones{
         width: 70%;
-    }
+    } */
     .container .cards .contactanosDesarrolladores{
         width: 40%;
     }
@@ -2085,7 +2086,7 @@ html{
     }
 }
 @media (max-width:850px){
-    .header{
+    /* .header{
         width:100vw;
         height: 65px;
         display: flex;
@@ -2184,14 +2185,14 @@ html{
     }
     .header .close:hover{
         transform: scale(105%) rotate(270deg);
-    }
-    .contenedor .heroSection .hero .cellphone{
+    } */
+    /* .contenedor .heroSection .hero .cellphone{
         width: 53%;
-    }
-    .contenedor .nosotros .containerInfo .info{
+    } */
+    /* .contenedor .nosotros .containerInfo .info{
         width: 80%;
-    }
-    .contenedor .contenedorMatch{
+    } */
+    /* .contenedor .contenedorMatch{
         width: 90%;
     }
     .contenedor .contenedorMatch .bannerMatch{
@@ -2200,11 +2201,11 @@ html{
     }
     .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match{
         font-size: 5rem;
-    }
-    .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
+    } */
+    /* .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
         margin: 5px auto 5px 15px;
-    }
-    .contenedor .patrocinadores{
+    } */
+    /* .contenedor .patrocinadores{
         width:85%;
     }
     .contenedor .patrocinadores .empresasPatrocinadorasUno img{
@@ -2212,10 +2213,10 @@ html{
     }
     .contenedor .patrocinadores .empresasPatrocinadorasDos img{
         width: 85px;
-    }
-    .contenedor .accordion .whatsApp{
+    } */
+    /* .contenedor .accordion .whatsApp{
         width: 40%;
-    }
+    } */
     .container .buscadorServices{
         width: 80%;
     }
@@ -2235,7 +2236,7 @@ html{
     .container .accordion .whatsApp{
         width: 50%;
     }
-    .footer{
+    /* .footer{
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -2279,10 +2280,10 @@ html{
     }
     .footer .mainFooter .menu ul{
         margin-left: -32px;
-    }
+    } */
 }
 @media (max-width:767px){
-    .header{
+    /* .header{
         padding :0px 40px;
     }
     .header .menu{
@@ -2303,8 +2304,8 @@ html{
     .header .menu .socialMedia{
         display: flex;
         justify-content: center;
-    }
-    .contenedor .heroSection .hero{
+    } */
+    /* .contenedor .heroSection .hero{
         width:90%;
         margin: -100px auto;
     }
@@ -2320,15 +2321,15 @@ html{
     }
     .contenedor .heroSection .hero .cellphone{
         width: 53%;
-    }
-    .contenedor .contenedorEmpleos .jobs .empleosArticle{
+    } */
+    /* .contenedor .contenedorEmpleos .jobs .empleosArticle{
         width: 80%;
         margin: 0px auto;
     }
     .contenedor .contenedorEmpleos .jobs .empleosArticle .contenedorEmpleo .btnDesarrolladorDiseñador{
         width: 50%;
-    }
-    .contenedor .contenedorMatch{
+    } */
+    /* .contenedor .contenedorMatch{
         width:90%;
     }
     .contenedor .contenedorMatch .bannerMatch{
@@ -2337,8 +2338,8 @@ html{
     }
     .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match{
         font-size: 4rem;
-    }
-    .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort{
+    } */
+    /* .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort{
         width: 80%;
     }
     .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
@@ -2346,10 +2347,10 @@ html{
     }
     .contenedor .containerTestimony .verMas{
         width: 40%;
-    }
-    .contenedor .accordion{
+    } */
+    /* .contenedor .accordion{
         width: 100%;
-    }
+    } */
     .container .cards{
         width: 100%;
         margin: 0px auto;
@@ -2445,20 +2446,20 @@ html{
     .container .accordion .whatsApp{
         width: 100%;
     }
-    .footer .mainFooter{
+    /* .footer .mainFooter{
         width: 60%;
         margin: 40px auto;
-    }
+    } */
 }
 @media (max-width: 490px){
-    .header .menu{
+    /* .header .menu{
         width: 100vw;
         height: 100%;
     }
     .header .menu ul li .categoria{
         font-size: 0.8rem !important;
-    }
-    .contenedor .heroSection .hero .info h3{
+    } */
+    /* .contenedor .heroSection .hero .info h3{
         font-size: 1.2rem;
     }
     .contenedor .heroSection .hero .info h1{
@@ -2478,8 +2479,8 @@ html{
     }
     .contenedor .heroSection .hero .cellphone{
         width: 83%;
-    }
-    .contenedor .nosotros .containerInfo .laptop{
+    } */
+    /* .contenedor .nosotros .containerInfo .laptop{
         width: 100%;
     }
     .contenedor .nosotros .subtitulo{
@@ -2491,8 +2492,8 @@ html{
     }
     .contenedor .nosotros .containerInfo .info p{
         font-size: 0.8rem;
-    }
-    .contenedor .contenedorEmpleos .subtitulo{
+    } */
+    /* .contenedor .contenedorEmpleos .subtitulo{
         font-size: 1.2rem;
     }
     .contenedor .contenedorEmpleos .jobs{
@@ -2525,8 +2526,8 @@ html{
         width: 95%;
         font-size: 0.8rem;
         margin: 0px auto;
-    }
-    .contenedor .contenedorMatch{
+    } */
+    /* .contenedor .contenedorMatch{
         width: 90%;
     }
     .contenedor .contenedorMatch .bannerMatch{
@@ -2534,13 +2535,10 @@ html{
     }
     .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match{
         font-size: 3rem;
-    }
-    .contenedor .containerTestimony .subtitulo{
+    } */
+    /* .contenedor .containerTestimony .subtitulo{
         font-size: 1.2rem;
         font-weight: 600;
-    }
-    .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort{
-        width: 90%;
     }
     .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort{
         width: 90%;
@@ -2555,8 +2553,8 @@ html{
     .contenedor .containerTestimony .verMas{
         width:90%;
         font-size: 0.8rem;
-    }
-    .contenedor .patrocinadores .empresasPatrocinadorasUno img{
+    } */
+    /* .contenedor .patrocinadores .empresasPatrocinadorasUno img{
         width: 65px;
     }
     .contenedor .patrocinadores .subtitulo{
@@ -2565,8 +2563,8 @@ html{
     }
     .contenedor .patrocinadores .empresasPatrocinadorasDos img{
         width: 65px;
-    }
-    .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones{
+    } */
+    /* .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones{
         width: 100%;
     }
     .contenedor .bannerPublicidadDos .bannerSection .banner .accordion{
@@ -2577,8 +2575,8 @@ html{
     }
     .contenedor .bannerPublicidadDos .bannerSection .banner .accordion .accordion-item .paragraph{
         font-size: 0.75rem !important;
-    }
-    .contenedor .accordion .subtitle{
+    } */
+    /* .contenedor .accordion .subtitle{
         font-size: 1.2rem;
         font-weight: 600;
     }
@@ -2591,7 +2589,7 @@ html{
     .contenedor .accordion .whatsApp{
         width: 100%;
         font-size: 0.8rem;
-    }
+    } */
     .container .buscadorServices p{
         font-size: 0.8rem;
     }
@@ -2701,12 +2699,18 @@ html{
         margin: 10px auto;
         font-size: 0.8rem;
     }
-    .footer .mainFooter .footerMedium .news .accion .btnAccion{
+    /* .footer .mainFooter .footerMedium .news .accion .btnAccion{
         font-size: 0.8rem;
-    }
+    } */
 }
 @media (max-width:400px){
-    .contenedor .contenedorMatch{
+    /* .contenedor .contenedorEmpleos .jobs{
+        width: 90%;
+    }
+    .contenedor .contenedorEmpleos .jobs .empleosArticle{
+        width: 90%;
+    } */
+    /* .contenedor .contenedorMatch{
         width:100%;
     }
     .contenedor .contenedorMatch .bannerMatch{
@@ -2714,17 +2718,12 @@ html{
     }
     .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match{
         font-size: 2.5rem;
-    }
-    .contenedor .contenedorEmpleos .jobs{
-        width: 90%;
-    }
-    .contenedor .contenedorEmpleos .jobs .empleosArticle{
-        width: 90%;
-    }
+    } */
+
     .container .cards{
         padding: 0px 10px;
     }
-    .contenedor .containerTestimony{
+    /* .contenedor .containerTestimony{
         width: 100%;
         margin: 0px auto;
     }
@@ -2733,7 +2732,7 @@ html{
     }
     .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
         margin: 0px 0px 0px -5px;
-    }
+    } */
     .containerJob {
         width: 90%;
     }
@@ -2770,7 +2769,7 @@ html{
     .container .accordion .whatsApp{
         width: 100%;
     }
-    .footer .footerMedium .news .accion input{
+    /* .footer .footerMedium .news .accion input{
         width: 100%;
     }
     .footer .footerMedium .news .accion .btnAccion{
@@ -2783,10 +2782,10 @@ html{
         justify-content: space-evenly;
         align-items: center;
         margin: 50px auto;
-    }
+    } */
 }
 @media (max-width:326px){
-    .contenedor .contenedorMatch{
+    /* .contenedor .contenedorMatch{
         width:100%;
     }
     .contenedor .contenedorMatch .bannerMatch{
@@ -2797,10 +2796,10 @@ html{
     }
     .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match{
         font-size: 1.5rem;
-    }
-    .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
+    } */
+    /* .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data{
         margin: 0px 0px 0px -17px;
-    }
+    } */
     .containerJob{
         width: 100%;
         margin: 150px auto;
