--- a/css/style.css
+++ b/css/style.css
@@ -1889,7 +1889,7 @@ html{
     .contenedor .arrowUp{
         display:none
     } */
-    .container .buscadorServices{
+    /* .container .buscadorServices{
         width: 70%;
     }
     .container .cards .contenedorDevelopers .cardDev, .contenedorDesigners .cardDesigners{
@@ -1903,7 +1903,7 @@ html{
     }
     .container .accordion .whatsApp{
         width: 20%;
-    }
+    } */
     /* .footer .mainFooter{
         width: 80%;
     } */
@@ -1985,7 +1985,7 @@ html{
     /* .contenedor .accordion .whatsApp{
         width: 30%;
     } */
-    .container .containerTestimony .headline{
+    /* .container .containerTestimony .headline{
         width: 60%;
         display: flex;
         flex-direction: column;
@@ -2017,7 +2017,7 @@ html{
     }
     .container .accordion .whatsApp{
         width: 30%;
-    }
+    } */
     /* .bannerPublicidadDos .bannerSection .banner{
         display: flex;
         flex-direction: column-reverse;
